--- a/Architector.ipynb
+++ b/Architector.ipynb
@@ -6,7 +6,7 @@
       "name": "Architector.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMqC4jytJb6DTdVBK5xbto6",
+      "authorship_tag": "ABX9TyMfugyK2m7LwkVYYzgHALxR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,26 +26,15 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "VeZCq0nG3-Ez",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "nyT8erRV4NoV",
         "colab_type": "text"
       },
       "source": [
-        "# Is this going to be working?"
+        "# Is this going to be working?\n",
+        "\n",
+        "does it work to save it to GH?"
       ]
     }
   ]
