--- a/Architector.ipynb
+++ b/Architector.ipynb
@@ -6,7 +6,7 @@
       "name": "Architector.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMfugyK2m7LwkVYYzgHALxR",
+      "authorship_tag": "ABX9TyOTatyqROupqRpfwmuFwDgf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,9 +32,51 @@
         "colab_type": "text"
       },
       "source": [
-        "# Is this going to be working?\n",
+        "# Architector\n",
         "\n",
-        "does it work to save it to GH?"
+        "> Algorithm to detect features of residential architecture.\n",
+        "\n",
+        "\n",
+        "## Possible Pipeline\n",
+        "1. Detect if image has house\n",
+        "2. Do a rough detection on labeled architecture\n",
+        "  - a. find a large dataset of house fronts\n",
+        "  - b. label these with the right architecture\n",
+        "  - c. train model\n",
+        "  - d. win\n",
+        "3. Recognise features (roof, window, shape of building, color, walls etc)\n",
+        "  - Either use supervised learning:\n",
+        "    - for these individual features have a huge amount of labeled data \n",
+        "  - Or unsupervised\n",
+        "    - seperate the most distinct features in these\n",
+        "\n",
+        "## Dataset\n",
+        "> How to get a good dataset?\n",
+        "\n",
+        "#### Google Maps Street View\n",
+        "\n",
+        "#### Scrape from Zillow, HotPads, Funda, etc.\n",
+        "\n",
+        "### Labeling\n",
+        "\n",
+        "## Things to test\n",
+        "Try running simple algorithm on lots of data and see if it picked up on good catagories through **unsupervised learning**.\n",
+        "\n",
+        "## Roadmap\n",
+        "\n",
+        "### Proof of concept\n",
+        "1. First do some testing, find 10 popular architecture styles\n",
+        "2. Find at least 100 images of those architecture styles\n",
+        "3. Train with labels\n",
+        "4. Put on server\n",
+        "5. Make api and do some demoing with test frontend\n",
+        "\n",
+        "### Do the stuff above\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     }
   ]
