--- a/Architector.ipynb
+++ b/Architector.ipynb
@@ -6,7 +6,8 @@
       "name": "Architector.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOTatyqROupqRpfwmuFwDgf",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO3k0XpJclxRhK1BMgvqbQi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,17 +68,50 @@
         "### Proof of concept\n",
         "1. First do some testing, find 10 popular architecture styles\n",
         "2. Find at least 100 images of those architecture styles\n",
+        "  - check pintrest\n",
+        "  - google images\n",
+        "  - zillow\n",
+        "  - hotpads\n",
+        "  - maybe use cgi to generate houses\n",
+        "  - [cool house concepts](https://coolhouseconcepts.com/house-plans/3-bedroom-bungalow-house-plan/)\n",
+        "  - check [houseplans.com](https://www.houseplans.com/collection/design-styles)\n",
         "3. Train with labels\n",
         "4. Put on server\n",
         "5. Make api and do some demoing with test frontend\n",
         "\n",
         "### Do the stuff above\n",
         "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NF2uoueW-UP-",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Links to possibly intereting things\n",
         "\n",
-        "\n",
+        "* [Darknet (fast and accurate object / feature detection)](https://github.com/AlexeyAB/darknet)\n",
+        "* [Tutorial for Darknet implementation](https://www.youtube.com/watch?v=10joRJt39Ns)\n",
+        "* [Darnet Tensorflow implementation)[https://github.com/wizyoung/YOLOv3_TensorFlow]\n",
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AtBUA41wEjlF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
