--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -2,18 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Architector.ipynb       README.md               \u001b[1m\u001b[31mdata\u001b[m\u001b[m\r\n",
-      "HousePlansScraper.ipynb Untitled.ipynb\r\n"
+      "27.77777777777778\n"
      ]
     }
    ],
+   "source": [
+    "total_count = 100_000\n",
+    "seconds_per_image = 1\n",
+    "total_seconds = total_count * seconds_per_image\n",
+    "total_hours = (total_seconds / 60) / 60\n",
+    "print(total_hours)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
